{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "5d432647-c1ad-212f-09e3-9b26197a9574",
  "resources": [
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081a12aec7531ade2",
            "domain": "vpc",
            "id": "eipalloc-081a12aec7531ade2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-82-159-223.compute-1.amazonaws.com",
            "public_ip": "3.82.159.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573467889021:internet-gateway/igw-0d767068edf8e13fc",
            "id": "igw-0d767068edf8e13fc",
            "owner_id": "573467889021",
            "vpc_id": "vpc-0f1135c20ca30957b"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081a12aec7531ade2",
            "association_id": "eipassoc-075b8f07b33471283",
            "connectivity_type": "public",
            "id": "nat-0b31dc4b758fbdb1b",
            "network_interface_id": "eni-062bc4ae53be76f98",
            "private_ip": "10.35.2.6",
            "public_ip": "3.82.159.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d1cc380ed351ac0"
          },
          "dependencies": [
            "module.my_vpc_module.aws_eip.eip",
            "module.my_vpc_module.aws_subnet.pri_sub",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573467889021:route-table/rtb-09d59f9cc4a77c1e1",
            "id": "rtb-09d59f9cc4a77c1e1",
            "owner_id": "573467889021",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b31dc4b758fbdb1b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1135c20ca30957b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_module.aws_eip.eip",
            "module.my_vpc_module.aws_nat_gateway.ngw",
            "module.my_vpc_module.aws_subnet.pri_sub",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573467889021:route-table/rtb-0850409c8102838d3",
            "id": "rtb-0850409c8102838d3",
            "owner_id": "573467889021",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d767068edf8e13fc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1135c20ca30957b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_module.aws_internet_gateway.igw",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093dc06778ed8fa9d",
            "route_table_id": "rtb-0850409c8102838d3",
            "subnet_id": "subnet-0938682a79c1383db"
          },
          "dependencies": [
            "module.my_vpc_module.aws_internet_gateway.igw",
            "module.my_vpc_module.aws_route_table.pub_rt",
            "module.my_vpc_module.aws_subnet.pub_sub",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573467889021:subnet/subnet-04d1cc380ed351ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.35.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d1cc380ed351ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573467889021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f1135c20ca30957b"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573467889021:subnet/subnet-0938682a79c1383db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.35.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0938682a79c1383db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573467889021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f1135c20ca30957b"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:573467889021:vpc/vpc-0f1135c20ca30957b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.35.0.0/16",
            "default_network_acl_id": "acl-030bafd53c4a61a70",
            "default_route_table_id": "rtb-0392585fa8e1a0844",
            "default_security_group_id": "sg-074e074f4832b2d0d",
            "dhcp_options_id": "dopt-0bf51cce12d7ee080",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1135c20ca30957b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0392585fa8e1a0844",
            "owner_id": "573467889021"
          }
        }
      ]
    }
  ]
}